--- a/styles.css
+++ b/styles.css
@@ -557,16 +557,22 @@ button:hover {
   margin-bottom: 20px;
 }
 
-.boton-whatsapp {
-  display: inline-block;
-  background-color: #28a745; /* Verde de WhatsApp */
-  color: white;
-  font-size: 1.2rem;
-  padding: 12px 20px;
-  border-radius: 20px;
+.boton-whatsapp,
+.boton-tienda {
+  display: block;
+  width: 200px;
+  text-align: center;
+  margin: 10px auto;
+  padding: 12px;
+  font-size: 16px;
   text-decoration: none;
-  font-weight: bold;
+  border-radius: 5px;
   transition: background 0.3s ease;
+}
+
+.boton-whatsapp {
+  background-color: #25d366;
+  color: white;
 }
 
 .boton-whatsapp:hover {
@@ -687,6 +693,17 @@ footer p {
 .section.show {
   opacity: 1;
   transform: translateY(0);
+}
+
+/* Para el btn back to home */
+
+.boton-tienda {
+  background-color: #007bff;
+  color: white;
+}
+
+.boton-tienda:hover {
+  background-color: #0056b3;
 }
 
 /* Diseño responsive */
