--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,14 @@ header {
 .header-right img {
   max-width: 300px;
   height: 300px;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 3s ease-out, transform 3s ease-out;
+}
+
+.header-right img.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 /*  Estilos para la página de gracias*/
@@ -165,6 +173,14 @@ p {
 .producto img {
   width: 100%;
   border-radius: 10px;
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.producto img.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .producto h3 {
@@ -175,6 +191,66 @@ p {
 .producto p {
   color: #666;
   font-size: 14px;
+}
+
+/* Sección de productos */
+.productos2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+}
+
+/* Ajuste de imágenes */
+.fila {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  width: 100%;
+  margin-top: 40px;
+}
+
+.columna {
+  flex: 1;
+  text-align: center;
+}
+
+/* Asegurar que las imágenes se vean */
+.columna img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Centrar el botón */
+.boton {
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.texto {
+  color: #6b4f4f;
+}
+
+.texto h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.texto p {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.texto a {
+  margin-top: 30px;
+}
+
+.icono {
+  font-size: 24px;
+  color: #e07a5f;
 }
 
 /* Seccion de promoción */
@@ -503,6 +579,22 @@ button:hover {
   background: #218838;
 }
 
+/* Aqui es para la imagen de la selección de productos */
+/* 
+.product-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
+.product-image {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 5px;
+} */
+
 /* Sección de te esperamos */
 
 .esperamos {
@@ -600,6 +692,10 @@ button:hover {
   text-decoration: none;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   transition: transform 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
 }
 
 .scroll-to-top {
@@ -762,6 +858,12 @@ footer p {
   .boton-whatsapp {
     font-size: 1rem;
     padding: 10px 16px;
+  }
+  .fila {
+    flex-direction: column;
+  }
+  .columna {
+    width: 100%;
   }
 }
 
